@@ -6,7 +6,7 @@
 
     <groupId>com.exceptionless</groupId>
     <artifactId>exceptionless-client</artifactId>
-    <version>1.0</version>
+    <version>1.0-beta1</version>
 
     <dependencies>
         <dependency>
@@ -33,6 +33,11 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.7.30</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.10.0</version>
         </dependency>
         <!--Test Dependencies-->
         <dependency>
@@ -77,6 +82,17 @@
                             <version>1.18.14</version>
                         </path>
                     </annotationProcessorPaths>
+                </configuration>
+            </plugin>
+            <!--2.22.0 is required for Junit 5 tests-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
                 </configuration>
             </plugin>
         </plugins>
